// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders - checked 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #FFFFFF;
  margin-right: 10px;
  border: 8px solid #008933;
}

.c3 {
  font-family: 'Gordita',sans-serif;
  text-transform: none;
  font-size: 16px;
  line-height: 17px;
  color: #292924;
  margin-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.c1 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  outline: 0;
}

.c1:focus-visible ~ .c2 .c4 {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c6 {
  position: relative;
  bottom: -5px;
}

@media (min-width:0px) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="c0"
>
  <input
    checked=""
    class="c1"
    id="radioButtonOne"
    type="radio"
    value="true"
  />
  <label
    class="c2 c3"
    for="radioButtonOne"
  >
    <div
      class="c4 c5"
    />
    <span
      class="c6"
    >
      What a lovely label
    </span>
  </label>
</div>
`;

exports[`renders - unchecked 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #FFFFFF;
  margin-right: 10px;
  border: 1px solid #D2D2D2;
}

.c3 {
  font-family: 'Gordita',sans-serif;
  text-transform: none;
  font-size: 16px;
  line-height: 17px;
  color: #292924;
  margin-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.c1 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  outline: 0;
}

.c1:focus-visible ~ .c2 .c4 {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c6 {
  position: relative;
  bottom: -5px;
}

@media (min-width:0px) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="c0"
>
  <input
    class="c1"
    id="radioButtonOne"
    type="radio"
    value="false"
  />
  <label
    class="c2 c3"
    for="radioButtonOne"
  >
    <div
      class="c4 c5"
    />
    <span
      class="c6"
    >
      What a lovely label
    </span>
  </label>
</div>
`;
